k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ourstore-backend
  labels:
    app: ourstore-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ourstore-backend
  template:
    metadata:
      labels:
        app: ourstore-backend
    spec:
      containers:
        - name: ourstore-backend
          image: ourstore/ourstore-backend:latest
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: ourstore-backend
spec:
  selector:
    app: ourstore-backend
  ports:
    - port: 8081
      targetPort: 8081
      protocol: TCP
  type: ClusterIP
